--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,16 @@ body {
   flex-direction: column;
 }
 
+.container {
+  height: 100%;
+  min-height: 100vh;
+  width: 80vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+}
+
 .box {
   background-color: white;
   display: flex;
@@ -32,7 +42,7 @@ body {
 
 .grid {
   background-color: white;
-  margin-top: 1em;
+  margin-top: 2em;
   border-radius: 7.5px;
 }
 
@@ -42,4 +52,18 @@ body {
 
 p {
   margin: 0.5em;
+}
+
+.banner {
+  margin-bottom: 1em;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  padding: 0.5em;
+  border-radius: 7.5px;
+  background-color: navy;
+}
+
+button:where(:not(:first-child)) {
+  margin-left: 0.5em;
 }
